--- a/src/fullhouse/ToernooiMaken.form
+++ b/src/fullhouse/ToernooiMaken.form
@@ -176,7 +176,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="jb_cancel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Cancel"/>
+        <Property name="text" type="java.lang.String" value="Sluit"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jb_cancelActionPerformed"/>
