--- a/src/fullhouse/RatingSystem.form
+++ b/src/fullhouse/RatingSystem.form
@@ -212,8 +212,12 @@
                       </Group>
                   </Group>
                   <Component id="l_nieuweRating" min="-2" max="-2" attributes="0"/>
-                  <Component id="jButton1" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="b_ok" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="84" max="-2" attributes="0"/>
+                      <Component id="b_openQuerry" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -348,7 +352,10 @@
                                   <Component id="l_tafel" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
-                              <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="b_openQuerry" alignment="3" min="-2" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="3" attributes="0">
@@ -741,6 +748,14 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Tafel:"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="b_openQuerry">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Extra gegevens"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="b_openQuerryActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
